<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/utilitiesContainer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="15dp"
        android:padding="15dp"
        android:visibility="invisible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_margin="5dp"
                android:id="@+id/searchedLocationAddress"/>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:layout_below="@id/searchedLocationAddress"
                android:id="@+id/get_directions_button"
                android:layout_margin="5dp"
                android:focusable="true"
                android:clickable="true">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:text="@string/directions"
                    android:layout_margin="6dp"/>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                android:backgroundTint="@android:color/holo_green_dark"
                android:layout_below="@id/searchedLocationAddress"
                android:layout_toEndOf="@id/get_directions_button"
                android:id="@+id/save_location_button"
                android:layout_margin="5dp"
                android:focusable="true"
                android:clickable="true">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:text="@string/save"
                    android:layout_margin="6dp"/>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                android:backgroundTint="@android:color/holo_purple"
                android:layout_below="@id/searchedLocationAddress"
                android:layout_toEndOf="@id/save_location_button"
                android:id="@+id/lookup_button"
                android:layout_margin="5dp"
                android:focusable="true"
                android:clickable="true">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:text="@string/look_up"
                    android:layout_margin="6dp"/>

            </com.google.android.material.card.MaterialCardView>

        </RelativeLayout>


    </com.google.android.material.card.MaterialCardView>



</androidx.constraintlayout.widget.ConstraintLayout>